--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,39 @@ p {
     color: #2d343c;
 }
 
+.white-section {
+    background-color: #7c9480;
+}
+
+/* Navigation Bar */
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+    font-family: "Creepster";
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+.nav-item {
+    padding: 18px 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Creepster";
+    font-weight: 200;
+}
+
+/* Title Section */
+#title .container-fluid {
+    padding: 3% 15% 7%;
+    text-align: left;
+}
+
+.title-image {
+    width: 60%;
+    position: absolute;
+    right: 30%;
+}
